--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -122,6 +122,67 @@
                     </div>
                 </div>
             </section>
+
+            <section class="projects">
+                <div class="project-card"
+                    data-images='["images/EMS/image1.png","images/EMS/image2.png","images/EMS/image3.png" ]'>
+                    <div class="project-image">
+                        <img src="images/EMS/image1.png" alt="">
+                    </div>
+                    <div class="project-details">
+                        <h3>AI Image Generator</h3>
+                        <p>This is a full-stack AI Image Generator app where users can enter prompts to generate and
+                            save AI-generated images using the Hugging Face API.</p>
+                        <div class="tech-stack">
+                            <span>MongoDB</span>
+                            <span>Express</span>
+                            <span>React</span>
+                            <span>Node.js</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card"
+                    data-images='["images/EMS/image1.png","images/EMS/image2.png","images/EMS/image3.png" ]'>
+                    <div class="project-image">
+                        <img src=" images/EMS/image1.png" alt="">
+                    </div>
+                    <div class="project-details">
+                        <h3>AI chat bot</h3>
+                        <p>This is an AI-powered chatbot built using the Google Gemini API with a clean, responsive
+                            React frontend and a Node.js backend. It allows users to interact with an intelligent
+                            assistant in real time, simulating natural conversations.
+                        </p>
+                        <div class="tech-stack">
+                            <span>MongoDB</span>
+                            <span>Express</span>
+                            <span>React</span>
+                            <span>Node.js</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card"
+                    data-images='["images/EMS/image1.png","images/EMS/image2.png","images/EMS/image3.png" ]'>
+                    <div class="project-image">
+                        <img src=" images/EMS/image1.png" alt="">
+                    </div>
+                    <div class="project-details">
+                        <h3>Employee Management system</h3>
+                        <p>A full-stack Employee Management System built with the MERN stack and styled using Tailwind
+                            CSS, allowing seamless management of employee records through a clean, responsive interface.
+                            It features real-time validation and CRUD operations to efficiently handle employee data.
+                        </p>
+                        <div class="tech-stack">
+                            <span>MongoDB</span>
+                            <span>Express</span>
+                            <span>React</span>
+                            <span>Node.js</span>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
         </div>
     </div>
 
