--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -48,8 +48,8 @@
                         class="fab fa-instagram"></i></a>
             </div>
 
-            <div class="resume">
-                Download my Resume <i class="fa-solid fa-file-arrow-down"></i></a>
+            <div class="resume"><a target="_blank" href="/resume-folder/Shafee_resume.pdf" class="resume-download">
+                    Download my Resume <i class="fa-solid fa-file-arrow-down"></i></a>
             </div>
         </div>
         <!-- Scrollable section-->
@@ -149,7 +149,7 @@
                             <div class="year">2015-2016</div>
                             <div class="experience-details">
                                 <h3>Deccan Airsports</h3>
-                                <p class="work-title">Web Developers</p>
+                                <p class="work-title">Web Developer</p>
                                 <p class="work-details">At Deccan Airsports, I revamped the company website to improve
                                     both
                                     functionality and user
@@ -167,7 +167,7 @@
 
                     <section class="projects">
 
-                        <h1>My Projects</h1>
+                        <h1 class="project-title">My Projects</h1>
                         <div class="project-card"
                             data-images='["images/liveChat/live-chat2.png","images/liveChat/live-chat3.png","images/liveChat/live-chat4.png","images/liveChat/live-chat5.png" ]'>
                             <div class="project-image">
