--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -48,8 +48,9 @@
                         class="fab fa-instagram"></i></a>
             </div>
 
-            <div class="resume"><a target="_blank" href="/resume-folder/Shafee_resume.pdf" class="resume-download">
-                    Download my Resume <i class="fa-solid fa-file-arrow-down"></i></a>
+            <div class="resume-div"><a class="resume" target="_blank" href="/resume-folder/Shafee_resume.pdf"
+                    class="resume-download">
+                    View my Resume <i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
         <!-- Scrollable section-->
@@ -91,7 +92,7 @@
                     <!-- Experience section-->
                     <h2 class="Professional-ex-heading">Professional Experience</h2>
 
-                    <section class="experience">
+                    <section class="experience" id="experience">
 
                         <!--Amazon exp-->
 
@@ -165,7 +166,7 @@
                         </div>
                     </section>
 
-                    <section class="projects">
+                    <section class="projects" id="projects">
 
                         <h1 class="project-title">My Projects</h1>
                         <div class="project-card"
@@ -175,7 +176,8 @@
                             </div>
                             <div class="project-details">
                                 <h3>Live Chat Application</h3>
-                                <p>This is a real-time chat application built with the MERN stack, Tailwind CSS for
+                                <p class="project-info">This is a real-time chat application built with the MERN stack,
+                                    Tailwind CSS for
                                     styling, and
                                     Socket.io for bi-directional communication. It supports instant messaging between
                                     users,
@@ -191,8 +193,6 @@
                                     <span>Node.js</span>
                                     <span>Tailwind</span>
                                     <span>Socket.io</span>
-
-
                                 </div>
                             </div>
                         </div>
@@ -254,7 +254,8 @@
     </div>
 
 
-    </div>
+
+
     <script src="script.js"></script>
 </body>
 
