--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -168,85 +168,93 @@
             <section class="projects" id="projects">
 
                 <h1 class="project-title">My Projects</h1>
-                <div class="project-card"
-                    data-images='["images/liveChat/live-chat2.png","images/liveChat/live-chat3.png","images/liveChat/live-chat4.png","images/liveChat/live-chat5.png" ]'>
-                    <div class="project-image">
-                        <img src="images/liveChat/live-chat1.png" alt="">
-                    </div>
-                    <div class="project-details">
-                        <h3>Live Chat Application</h3>
-                        <p class="project-info">This is a real-time chat application built with the MERN stack,
-                            Tailwind CSS for
-                            styling, and
-                            Socket.io for bi-directional communication. It supports instant messaging between
-                            users,
-                            user authentication, and active status indicators. The interface is responsive and
-                            clean,
-                            designed to mimic modern messaging platforms with real-time updates and typing
-                            indicators.
-                        </p>
-                        <div class="tech-stack">
-                            <span>MongoDB</span>
-                            <span>Express</span>
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>Tailwind</span>
-                            <span>Socket.io</span>
+
+
+                <a href="https://github.com/Shafee-ee/live_chat">
+                    <div class="project-card"
+                        data-images='["images/liveChat/live-chat2.png","images/liveChat/live-chat3.png","images/liveChat/live-chat4.png","images/liveChat/live-chat5.png" ]'>
+                        <div class="project-image">
+                            <img src="images/liveChat/live-chat1.png" alt="">
+                        </div>
+                        <div class="project-details">
+                            <h3>Live Chat Application</h3>
+                            <p class="project-info">This is a real-time chat application built with the MERN stack,
+                                Tailwind CSS for
+                                styling, and
+                                Socket.io for bi-directional communication. It supports instant messaging between
+                                users,
+                                user authentication, and active status indicators. The interface is responsive and
+                                clean,
+                                designed to mimic modern messaging platforms with real-time updates and typing
+                                indicators.
+                            </p>
+                            <div class="tech-stack">
+                                <span>MongoDB</span>
+                                <span>Express</span>
+                                <span>React</span>
+                                <span>Node.js</span>
+                                <span>Tailwind</span>
+                                <span>Socket.io</span>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-card"
-                    data-images='["images/ecommerce/ecommerce2.png","images/ecommerce/ecommerce3.png","images/ecommerce/ecommerce4.png","images/ecommerce/ecommerce5.png" ]'>
-                    <div class="project-image">
-                        <img src=" images/ecommerce/ecommerce1.png" alt="">
-                    </div>
-                    <div class="project-details">
-                        <h3>Ecommerce Website</h3>
-                        <p>This is a full-stack eCommerce web application built using the MERN stack. It
-                            features a
-                            modern, responsive frontend for product browsing
-                            and a robust backend for handling authentication, cart management, and order
-                            processing. The
-                            app supports user registration, secure login, dynamic product listings, and
-                            real-time
-                            updates across the shopping flow.
-                        </p>
-                        <div class="tech-stack">
-                            <span>MongoDB</span>
-                            <span>Express</span>
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>Tailwind</span>
+                <a href="https://github.com/Shafee-ee/live_chat">
+                    <div class="project-card"
+                        data-images='["images/ecommerce/ecommerce2.png","images/ecommerce/ecommerce3.png","images/ecommerce/ecommerce4.png","images/ecommerce/ecommerce5.png" ]'>
+                        <div class="project-image">
+                            <img src=" images/ecommerce/ecommerce1.png" alt="">
+                        </div>
+                        <div class="project-details">
+                            <h3>Ecommerce Website</h3>
+                            <p>This is a full-stack eCommerce web application built using the MERN stack. It
+                                features a
+                                modern, responsive frontend for product browsing
+                                and a robust backend for handling authentication, cart management, and order
+                                processing. The
+                                app supports user registration, secure login, dynamic product listings, and
+                                real-time
+                                updates across the shopping flow.
+                            </p>
+                            <div class="tech-stack">
+                                <span>MongoDB</span>
+                                <span>Express</span>
+                                <span>React</span>
+                                <span>Node.js</span>
+                                <span>Tailwind</span>
 
+                            </div>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-card"
-                    data-images='["images/EMS/image1.png","images/EMS/image2.png","images/EMS/image3.png" ]'>
-                    <div class="project-image">
-                        <img src=" images/EMS/image1.png" alt="">
-                    </div>
-                    <div class="project-details">
-                        <h3>Employee Management system</h3>
-                        <p>A full-stack Employee Management System built with the MERN stack and styled using
-                            Tailwind
-                            CSS, allowing seamless management of employee records through a clean, responsive
-                            interface.
-                            It features real-time validation and CRUD operations to efficiently handle employee
-                            data.
-                        </p>
-                        <div class="tech-stack">
-                            <span>MongoDB</span>
-                            <span>Express</span>
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>Tailwind</span>
+                <a href="https://github.com/Shafee-ee/employee_Management_system">
+                    <div class="project-card"
+                        data-images='["images/EMS/image1.png","images/EMS/image2.png","images/EMS/image3.png" ]'>
+                        <div class="project-image">
+                            <img src=" images/EMS/image1.png" alt="">
+                        </div>
+                        <div class="project-details">
+                            <h3>Employee Management system</h3>
+                            <p>A full-stack Employee Management System built with the MERN stack and styled using
+                                Tailwind
+                                CSS, allowing seamless management of employee records through a clean, responsive
+                                interface.
+                                It features real-time validation and CRUD operations to efficiently handle employee
+                                data.
+                            </p>
+                            <div class="tech-stack">
+                                <span>MongoDB</span>
+                                <span>Express</span>
+                                <span>React</span>
+                                <span>Node.js</span>
+                                <span>Tailwind</span>
 
+                            </div>
                         </div>
                     </div>
-                </div>
+                </a>
 
             </section>
         </div>
