--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -170,91 +170,96 @@
                 <h1 class="project-title">My Projects</h1>
 
 
-                <a href="https://github.com/Shafee-ee/live_chat">
-                    <div class="project-card"
-                        data-images='["images/liveChat/live-chat2.png","images/liveChat/live-chat3.png","images/liveChat/live-chat4.png","images/liveChat/live-chat5.png" ]'>
-                        <div class="project-image">
-                            <img src="images/liveChat/live-chat1.png" alt="">
-                        </div>
-                        <div class="project-details">
-                            <h3>Live Chat Application</h3>
-                            <p class="project-info">This is a real-time chat application built with the MERN stack,
-                                Tailwind CSS for
-                                styling, and
-                                Socket.io for bi-directional communication. It supports instant messaging between
-                                users,
-                                user authentication, and active status indicators. The interface is responsive and
-                                clean,
-                                designed to mimic modern messaging platforms with real-time updates and typing
-                                indicators.
-                            </p>
-                            <div class="tech-stack">
-                                <span>MongoDB</span>
-                                <span>Express</span>
-                                <span>React</span>
-                                <span>Node.js</span>
-                                <span>Tailwind</span>
-                                <span>Socket.io</span>
-                            </div>
+
+                <div class="project-card"
+                    data-images='["images/liveChat/live-chat2.png","images/liveChat/live-chat3.png","images/liveChat/live-chat4.png","images/liveChat/live-chat5.png" ]'>
+                    <div class="project-image">
+                        <img src="images/liveChat/live-chat1.png" alt="">
+                    </div>
+                    <div class="project-details">
+                        <a href="https://github.com/Shafee-ee/live_chat" target="_blank" class="project-link">
+                            <h3>Live Chat Application</h3><i class="fa-solid fa-up-right-from-square"></i>
+                        </a>
+                        <p class="project-info">This is a real-time chat application built with the MERN stack,
+                            Tailwind CSS for
+                            styling, and
+                            Socket.io for bi-directional communication. It supports instant messaging between
+                            users,
+                            user authentication, and active status indicators. The interface is responsive and
+                            clean,
+                            designed to mimic modern messaging platforms with real-time updates and typing
+                            indicators.
+                        </p>
+                        <div class="tech-stack">
+                            <span>MongoDB</span>
+                            <span>Express</span>
+                            <span>React</span>
+                            <span>Node.js</span>
+                            <span>Tailwind</span>
+                            <span>Socket.io</span>
                         </div>
                     </div>
-                </a>
+                </div>
 
-                <a href="https://github.com/Shafee-ee/live_chat">
-                    <div class="project-card"
-                        data-images='["images/ecommerce/ecommerce2.png","images/ecommerce/ecommerce3.png","images/ecommerce/ecommerce4.png","images/ecommerce/ecommerce5.png" ]'>
-                        <div class="project-image">
-                            <img src=" images/ecommerce/ecommerce1.png" alt="">
-                        </div>
-                        <div class="project-details">
-                            <h3>Ecommerce Website</h3>
-                            <p>This is a full-stack eCommerce web application built using the MERN stack. It
-                                features a
-                                modern, responsive frontend for product browsing
-                                and a robust backend for handling authentication, cart management, and order
-                                processing. The
-                                app supports user registration, secure login, dynamic product listings, and
-                                real-time
-                                updates across the shopping flow.
-                            </p>
-                            <div class="tech-stack">
-                                <span>MongoDB</span>
-                                <span>Express</span>
-                                <span>React</span>
-                                <span>Node.js</span>
-                                <span>Tailwind</span>
 
-                            </div>
+                <div class="project-card"
+                    data-images='["images/ecommerce/ecommerce2.png","images/ecommerce/ecommerce3.png","images/ecommerce/ecommerce4.png","images/ecommerce/ecommerce5.png" ]'>
+                    <div class="project-image">
+                        <img src=" images/ecommerce/ecommerce1.png" alt="">
+                    </div>
+                    <div class="project-details">
+                        <a href="https://github.com/Shafee-ee/ecommerce_quickCart.git" target="_blank"
+                            class="project-link">
+                            <h3>Ecommerce Website</h3><i class="fa-solid fa-up-right-from-square"></i>
+                        </a>
+                        <p>This is a full-stack eCommerce web application built using the MERN stack. It
+                            features a
+                            modern, responsive frontend for product browsing
+                            and a robust backend for handling authentication, cart management, and order
+                            processing. The
+                            app supports user registration, secure login, dynamic product listings, and
+                            real-time
+                            updates across the shopping flow.
+                        </p>
+                        <div class="tech-stack">
+                            <span>MongoDB</span>
+                            <span>Express</span>
+                            <span>React</span>
+                            <span>Node.js</span>
+                            <span>Tailwind</span>
+
                         </div>
                     </div>
-                </a>
+                </div>
 
-                <a href="https://github.com/Shafee-ee/employee_Management_system">
-                    <div class="project-card"
-                        data-images='["images/EMS/image1.png","images/EMS/image2.png","images/EMS/image3.png" ]'>
-                        <div class="project-image">
-                            <img src=" images/EMS/image1.png" alt="">
-                        </div>
-                        <div class="project-details">
-                            <h3>Employee Management system</h3>
-                            <p>A full-stack Employee Management System built with the MERN stack and styled using
-                                Tailwind
-                                CSS, allowing seamless management of employee records through a clean, responsive
-                                interface.
-                                It features real-time validation and CRUD operations to efficiently handle employee
-                                data.
-                            </p>
-                            <div class="tech-stack">
-                                <span>MongoDB</span>
-                                <span>Express</span>
-                                <span>React</span>
-                                <span>Node.js</span>
-                                <span>Tailwind</span>
+                <div class="project-card"
+                    data-images='["images/EMS/image1.png","images/EMS/image2.png","images/EMS/image3.png" ]'>
+                    <div class="project-image">
+                        <img src=" images/EMS/image1.png" alt="">
+                    </div>
+                    <div class="project-details">
+                        <a href="https://github.com/Shafee-ee/employee_Management_system" target="_blank"
+                            class="project-link">
+                            <h3>Employee Management system</h3><i class="fa-solid fa-up-right-from-square"></i>
+                        </a>
+                        <p>A full-stack Employee Management System built with the MERN stack and styled using
+                            Tailwind
+                            CSS, allowing seamless management of employee records through a clean, responsive
+                            interface.
+                            It features real-time validation and CRUD operations to efficiently handle employee
+                            data.
+                        </p>
+                        <div class="tech-stack">
+                            <span>MongoDB</span>
+                            <span>Express</span>
+                            <span>React</span>
+                            <span>Node.js</span>
+                            <span>Tailwind</span>
 
-                            </div>
                         </div>
                     </div>
-                </a>
+                </div>
+
 
             </section>
         </div>
