--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -17,19 +17,19 @@
     <div class="container">
         <!-- static left section-->
         <div class="left left-container">
-            <div class="profile">
+            <div class="profile reveal">
                 <h1>Shafee Azeem</h1>
-                <p class="title">
+                <p class="title reveal">
                     Front End Engineer
                 </p>
-                <p class="skill"> MERN Stack | React.js |
+                <p class="skill reveal"> MERN Stack | React.js |
                     Javascript
                 </p>
-                <p class="action">I build accessible, pixel-perfect digital
+                <p class="action reveal">I build accessible, pixel-perfect digital
                     experiences for the web.</p>
 
             </div>
-            <nav class="navigation">
+            <nav class="navigation reveal">
                 <ul>
                     <li><a href="#home" class="nav-link">Home</a></li>
                     <li><a href="#experience" class="nav-link">Experience</a></li>
@@ -37,7 +37,7 @@
                 </ul>
             </nav>
 
-            <div class="social-links">
+            <div class="social-links reveal">
                 <a href="https://www.linkedin.com/in/shafee-azeem/" target="_blank" class="social-link linkedin"><i
                         class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/Shafee-ee" target="_blank" class="social-link github"> <i
@@ -54,10 +54,10 @@
             </div>
         </div>
         <!-- Scrollable section-->
-        <div class="right">
+        <div class="right reveal">
             <!-- home section-->
 
-            <section id="home" class="main">
+            <section id="home" class="main reveal">
 
                 <p>I'm Shafee, a frontend engineer with a strong eye for accessible, pixel-perfect interfaces
                     and clean,
@@ -89,9 +89,9 @@
 
 
             <!-- Experience section-->
-            <h2 class="Professional-ex-heading">Professional Experience</h2>
+            <h2 class="Professional-ex-heading reveal">Professional Experience</h2>
 
-            <section class="experience" id="experience">
+            <section class="experience reveal" id="experience">
 
                 <!--Amazon exp-->
 
@@ -165,13 +165,13 @@
                 </div>
             </section>
 
-            <section class="projects" id="projects">
+            <section class="projects reveal" id="projects">
 
                 <h1 class="project-title">My Projects</h1>
 
 
 
-                <div class="project-card"
+                <div class="project-card reveal"
                     data-images='["images/liveChat/live-chat2.png","images/liveChat/live-chat3.png","images/liveChat/live-chat4.png","images/liveChat/live-chat5.png" ]'>
                     <div class="project-image">
                         <img src="images/liveChat/live-chat1.png" alt="">
@@ -202,7 +202,7 @@
                 </div>
 
 
-                <div class="project-card"
+                <div class="project-card reveal"
                     data-images='["images/ecommerce/ecommerce2.png","images/ecommerce/ecommerce3.png","images/ecommerce/ecommerce4.png","images/ecommerce/ecommerce5.png" ]'>
                     <div class="project-image">
                         <img src=" images/ecommerce/ecommerce1.png" alt="">
@@ -232,7 +232,7 @@
                     </div>
                 </div>
 
-                <div class="project-card"
+                <div class="project-card reveal"
                     data-images='["images/EMS/image1.png","images/EMS/image2.png","images/EMS/image3.png" ]'>
                     <div class="project-image">
                         <img src=" images/EMS/image1.png" alt="">
