--- a/shafee azeem.com/index.html
+++ b/shafee azeem.com/index.html
@@ -61,7 +61,8 @@
 
                 <p>I'm Shafee, a frontend engineer with a strong eye for accessible, pixel-perfect interfaces
                     and clean,
-                    maintainable code. With around 8 years of total experience — including 3 years building
+                    maintainable code. With around <span class="highlighter">8 years</span> of total experience —
+                    including <span class="highlighter">3 years</span> building
                     real-world
                     frontend solutions for clients — I specialize in React and modern JavaScript. While frontend
                     is my
@@ -266,7 +267,9 @@
     </div>
 
 
-
+    <!-- <footer class="footer">
+        This website was loosely designed using FIGMA and brought to life using HTML, CSS and JAVASCRIPT.
+    </footer> -->
 
     <script src="script.js"></script>
 </body>
